# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import directionsRouter from "./directions";
 import usersRouter from "./users";
 import plansRouter from "./plans";
+import employesRouter from "./employes";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(directionsRouter);
 router.use(usersRouter);
 router.use(plansRouter);
+router.use(employesRouter);
 
 export default router;
